Bug 43105 - regression: WW8 nested table import
Summary: regression: WW8 nested table import
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Master old -3.6
Hardware: Other All
: medium normal
Assignee: Björn Michaelsen
URL:
Whiteboard: target:4.1.0 target:4.0.4 target:3.6.7
Keywords: regression
Depends on:
Blocks: mab3.6
  Show dependency treegraph
 
Reported: 2011-11-20 03:47 UTC by Björn Michaelsen
Modified: 2013-05-24 14:12 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
test document (24.00 KB, application/msword)
2011-11-20 03:49 UTC, Björn Michaelsen
Details
How the sample document looks in Master now, date: 2011-12-01, Build ID: 549f928-b211287-090bcba-45cf606 (93.70 KB, image/png)
2011-12-01 09:04 UTC, Roman Eisele
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Björn Michaelsen 2011-11-20 03:47:48 UTC
Nested tables import wrong in LibreOffice master, while libreoffice 3.4.x with 
the sw-nested-positionned-tables-ww8-import-fix.diff patch from libreoffice/build renders them correctly.

http://cgit.freedesktop.org/libreoffice/build/tree/patches/dev300/sw-nested-positionned-tables-ww8-import-fix.diff

Master renders the test document different that WORDVIEW.EXE with and without the patch, so I guess the patch has to go anyway.
Comment 1 Björn Michaelsen 2011-11-20 03:49:27 UTC
Created attachment 53701 [details]
test document
Comment 2 Björn Michaelsen 2011-11-20 03:54:53 UTC
@rene: I suggest the patch as is to be dropped for 3.5

@mst, caolan: Any idea, what causes the regression?
Comment 3 Björn Michaelsen 2011-11-20 04:32:49 UTC
Oh, even more fun: This worked without the patch in 3.4!

So:
a) For this test document (provided by mmeeks) the patch has no effect in 3.4 (works in both cases) or on master (works in neither case) => The patch has to die anyway.
b) It worked on 3.4 unpatched and doesnt on master unpatched => regression independent of patch.
Comment 5 Roman Eisele 2011-12-01 08:57:19 UTC
Maybe of some interest, or just for the record:

I don’t see any difference (anymore) between how LibreOffice 3.4.4 display the test document and how master displays it --
using LibO-dev 3.5.0
Build ID: 549f928-b211287-090bcba-45cf606
Build date: 2011-12-01
running on MacOS X 10.6.8 German

Will attach a screenshot of how it looks now.
A screenshot of the wrong display would be helpful ...
Comment 6 Roman Eisele 2011-12-01 09:04:29 UTC
Created attachment 54025 [details]
How the sample document looks in Master now, date: 2011-12-01, Build ID: 549f928-b211287-090bcba-45cf606
Comment 7 Björn Michaelsen 2011-12-08 04:44:35 UTC
Well, here (3.4.4-0ubuntu1) I see the "B" letter at the beginning of the outer cell, not floating free somewhere.
Comment 8 Caolán McNamara 2011-12-08 05:03:20 UTC
vanilla 3.3, 3.4 and 3.5 for me all display the same "floating" B
Comment 9 Roman Eisele 2012-05-03 09:24:55 UTC
This is a Writer issue, therefore changed 'Component' field accordingly.
Comment 10 Michael Meeks 2013-02-07 20:21:24 UTC
Still got the 'floating B' in the latest 4.0 - and since Caolan can't reproduce this as working in the older versions, it's hard to see it as a regression surely ? Clearly the B should be inside the table as MS Office shows it.
Comment 11 Joel Madero 2013-02-12 21:50:57 UTC
I'd like to remove this from MAB as no other bug has been reported that I can tell about this issue in 13+ months but I'll defer to your judgement Bjoern. 

For now, moving this to 3.6 MAB, if you feel like it can be removed and just be in our regression list then let's do that. Otherwise, maybe we can nominate for hard hack so that this is taken care of?
Comment 12 Björn Michaelsen 2013-02-13 09:24:34 UTC
https://gerrit.libreoffice.org/#/c/2133/
Comment 13 Not Assigned 2013-02-15 10:08:12 UTC
Bjoern Michaelsen committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ee1db992b98378b5e2f5e9aa8af0e36c375e582f

fdo#43105: apply old sw-nested-positionned-tables-ww8-import-fix.diff



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2013-05-24 14:02:00 UTC
Bjoern Michaelsen committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8bccae5d816abace259c9a1d0249e7195a2490d0&h=libreoffice-4-0

fdo#43105: apply old sw-nested-positionned-tables-ww8-import-fix.diff


It will be available in LibreOffice 4.0.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 15 Commit Notification 2013-05-24 14:10:35 UTC
Bjoern Michaelsen committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b14f6849f297406e9308576d2a5ad22d295cc125&h=libreoffice-3-6

fdo#43105: apply old sw-nested-positionned-tables-ww8-import-fix.diff


It will be available in LibreOffice 3.6.7.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 16 Miklos Vajna 2013-05-24 14:12:26 UTC
Bjoern fixed on master, I just backported to -4-0 and -3-6, marking as resolved.