fdo#43105: apply old sw-nested-positionned-tables-ww8-import-fix.diff

- replaced the really ugly goto hack though

Change-Id: I14dfbe414dc16b634fbaca0a365e2e9ec37ab08e
Reviewed-on: https://gerrit.libreoffice.org/2133
Reviewed-by: Björn Michaelsen <bjoern.michaelsen@canonical.com>
Tested-by: Björn Michaelsen <bjoern.michaelsen@canonical.com>